<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bckgrnd"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/stopW_hours"
        android:layout_width="79dp"
        android:layout_height="63dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="56dp"
        android:gravity="center"
        android:text="@string/upper_hrs"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/stopW_mins"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_hours"
        android:layout_width="44dp"
        android:layout_height="28dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="87dp"
        android:gravity="center"
        android:text="@string/lower_hrs"
        android:textAlignment="center"
        android:textColor="@color/brightTeal"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/display_mins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopW_hours" />

    <TextView
        android:id="@+id/stopW_mins"
        android:layout_width="79dp"
        android:layout_height="63dp"
        android:layout_marginStart="166dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="166dp"
        android:gravity="center"
        android:text="@string/upper_mins"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_mins"
        android:layout_width="45dp"
        android:layout_height="30dp"
        android:layout_marginStart="184dp"
        android:layout_marginEnd="183dp"
        android:gravity="center"
        android:text="@string/lower_mins"
        android:textAlignment="center"
        android:textColor="@color/brightTeal"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopW_mins" />

    <TextView
        android:id="@+id/stopW_secs"
        android:layout_width="79dp"
        android:layout_height="63dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="34dp"
        android:gravity="center"
        android:text="@string/upper_secs"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/stopW_mins"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_secs"
        android:layout_width="39dp"
        android:layout_height="30dp"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="53dp"
        android:gravity="center"
        android:text="@string/lower_secs"
        android:textAlignment="center"
        android:textColor="@color/brightTeal"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/display_mins"
        app:layout_constraintTop_toBottomOf="@+id/stopW_secs" />

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/count_up_logo"
        android:layout_width="174dp"
        android:layout_height="83dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="221dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/count_up_logo" />

    <TextView
        android:id="@+id/timer_hours"
        android:layout_width="79dp"
        android:layout_height="63dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="236dp"
        android:gravity="center"
        android:text="@string/upper_hrs"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/timer_mins"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/display_timer_hours"
        android:layout_width="44dp"
        android:layout_height="28dp"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="87dp"
        android:gravity="center"
        android:text="@string/lower_hrs"
        android:textAlignment="center"
        android:textColor="@color/brightTeal"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/display_timer_mins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_hours" />

    <TextView
        android:id="@+id/timer_mins"
        android:layout_width="79dp"
        android:layout_height="63dp"
        android:layout_marginStart="166dp"
        android:layout_marginTop="432dp"
        android:layout_marginEnd="166dp"
        android:gravity="center"
        android:text="@string/upper_mins"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_timer_mins"
        android:layout_width="45dp"
        android:layout_height="30dp"
        android:layout_marginStart="184dp"
        android:layout_marginEnd="182dp"
        android:gravity="center"
        android:text="@string/lower_mins"
        android:textAlignment="center"
        android:textColor="@color/brightTeal"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_mins" />

    <TextView
        android:id="@+id/timer_secs"
        android:layout_width="79dp"
        android:layout_height="63dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="28dp"
        android:gravity="center"
        android:text="@string/upper_secs"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timer_mins"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/display_timer_secs"
        android:layout_width="39dp"
        android:layout_height="30dp"
        android:layout_marginStart="91dp"
        android:layout_marginEnd="52dp"
        android:gravity="center"
        android:text="@string/lower_secs"
        android:textAlignment="center"
        android:textColor="@color/brightTeal"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/display_timer_mins"
        app:layout_constraintTop_toBottomOf="@+id/timer_secs" />

    <ImageView
        android:id="@+id/imageView2"
        android:contentDescription="@string/count_down_logo"
        android:layout_width="180dp"
        android:layout_height="83dp"
        android:layout_marginStart="215dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="324dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/count_down_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>